@@ -3,23 +3,23 @@ Hash: SHA256
 
 AUX cxxflags.patch 491 SHA256 46945f64a3e59f37ba602519e5272b09b3813cc4bf6b53033770b78e6ad0ddcc SHA512 d956647200eea150fe5d4be8323f51cdf0c5fb7a2e1f1507270721151607922fbb689faea9f0a29686c08bfd6506c6af27a09df59fc4adee1e45e71f0f9a3eb5 WHIRLPOOL 8bd723a4435138ee7c3547f5376ecb534adae3f1fe43de8437b518d1247d9f9c367f90f21f22656aca9f4c0ad62f401f98a7a1e36236c3f8a21398206a570c95
 AUX logkeys-conf.d 164 SHA256 0cb1da3fa2197414f1d30c612d20b9e2dee38785d18b8a0d37c5b219d43b8fac SHA512 953e2fb1592957ada9dcf87281802440c58616c6c96c5d8cec0201dea9996c0f2081b7f1f921d48809bcbd3daa214a8a96d8ab5b6e42aa0c735524b221d79ef8 WHIRLPOOL ae0f7e85aeeef7d9146af7586eeefd2ed1354b4db3f4d0f32c2b894d6d1377332ca2b40fc5c3f02738326380fbc9e9a68d757f58c65ff59ac5765d9f993605f8
-AUX logkeys-init.d 417 SHA256 91155d8af18641f81ac42da1570c4a36194d74ba11aaee096aaec9c2f60bd207 SHA512 45e5cc5584c2de60a208bb9ccf6db6285ed4547709f9d6004eb82f6b14991a004cd4736b6a4f4b5c6441ab5d8d4ab699fa34443f04413b88f8848cbc47ae91da WHIRLPOOL f801ae33499cb8ac1c1ffa7592f5025da38545ec29ed239d03e92bde7bea6500429e07017e230aed384e6f11b79ced81497fa9784f8a01d984831bf0201f2f03
-EBUILD logkeys-9999.ebuild 556 SHA256 f27568f93aac7b2bb6c2680271819732083d0881666b917867424e2512f42a02 SHA512 c1e73e1ed5c61b212183e6d07ba8a3ed8574957c2136bf27ce458d765447437cb165575e7a936a4dc889670b2f9e7d9699f26e7087e0e85c2ae5f3d53194e424 WHIRLPOOL 210968c5f218d69165bc01e561cdc6a8ba1f9766211cac10af7d819671dc8ae8289d5bafed3c025e35569ff431cf6e5a789118c7593b3453f731129fbfd78313
-MISC ChangeLog 85 SHA256 99df706563ee9ee356ddcc57aafc88375cd64cf5986573c5a39efd3eaf69b43a SHA512 fa1dcfa72fc7db94ca578cbf04368afc1bde9e0834a788e190a0307716bc3f5457245803f23cfc592eb606b18b2c2c0ce8133d9e068ee9747b72edc2e8ec4d93 WHIRLPOOL 42dcc85ba81ff447f2dbbdf15db2ad0a003c9def1c807cfe5c015df165341908b6f601d30e067d8adcb69d0cf811b38230f68878fb54908327304c0b495d680d
+AUX logkeys-init.d 418 SHA256 70baf9a22fe75cf1bdf42073ef2d2a8630560c61619f05744a918c70249ab805 SHA512 4701c144ec9567ed05084e82243525e9690eeccd231df9436762867807bfc5afc330a40d14a5ef307578669a71fa310ecd3dd54db20ff4c8dd94ac5822978f65 WHIRLPOOL 18f35d14d3e9381372e08d6c1a03def2b1c1ac9c6e3a244a58ceabb72fbea1142a32152e36194e0029d4b14e4573379587080a776f80cca6229b0191c730a7c9
+EBUILD logkeys-9999.ebuild 555 SHA256 c4e923d40c724e64ff4dc7bfe26f55e09da10942c6b75fc50600249ca7a93e9a SHA512 14ef2e1872932744877519253a38a9d368e8158f6c5fd12e578bb95b1c1b576ae7c13dfb17ab0684dc4cd06d275d53acc822aed84e048180ab840757dcca51fd WHIRLPOOL 161e7d3f66a1472053e9c42170aa4689423b17b8b736e084c29f1a95788707dedb152cbb7bdf88cb6c592f7e15e6ba8307928b0c910f06304a879ca234db901d
+MISC ChangeLog 276 SHA256 18fb110aa112b15bbb57cc2cc4392b5353ef6dc423e169b6f6105ea002d9e620 SHA512 0e27192d957f7b6be7a7006c2ef5aa7cba8d74d5cc34342a63bb7f9928378025c570e3d26911bbd56dd53635746b30bc948ef48d162b4168787e1ed95376f8a5 WHIRLPOOL 235e9336ac23917f4cda8024d867570ff54d2f678913385fe2e66bd5a845090e8eef295fa6d747106f73752a10e5c6578744df4343954eeed9a363eb16cc13a5
 MISC metadata.xml 247 SHA256 a07573e5b57603eb46018cd4acbb2fd7188d11f32c4da7b57cca2a017e3a82a8 SHA512 c65adc4867e625368b91701012ddfd7d1fb70b42a799cd18c6acbe6d2daae4d2fd94f554b865f82efefb8df9f7c3c52d4604df67cebf595c44d9c01567cdddac WHIRLPOOL 6bb40ec461701db4091d797f1cdab89b3805d6d9dbcec9ac6434bbcfa632b60efa965c05c4aaa374843907467b7a38f138051e7ec28a1a94c8ba03298a3ad392
 -----BEGIN PGP SIGNATURE-----
 
-iQIcBAEBCAAGBQJYHGmVAAoJELp701BxlEWf3YIQAJF8rDKLcKTcBInFnHJSzNnk
-YGWhkJnCPpvTMYRUQzbv29+ALMTOHuJ9utxGHBwPFookWI1o8BILW+sQfWOIUg/2
-5RdBRGsas43Ndl6PBbkZYyrNMBwZdOjs7u9gTNHPPrMuY+dBu5ygk3Ps+aONZZc6
-5M/C2ipliENJUJUWfVub1Xm1HfLDrKRjPNk6A4/teQWld1Jn3vtXhmMFfJGs24ny
-hhG9DbW6GcQ2vd35s/+U5JVedhTYeLMjdBig1nGNWgz6uFtiH3ZbN5Et67NAFq1T
-8szdKJdBXKD46SO2dELZ08Ib5jWK3VmYLMCE67pGc3vFjY0tB6wYIL9enQtsFl61
-dkBLXlMxAm81bDQcc3tO4SbxEgpKtbKwzzZ5k/vcmSDsWQAOS3XCcs2TEXD99Ruj
-dZR3VZjvj2f7POP/znFlDx7rnqyNRUmpzJQZ517dDsfsco3rhnEMooXsPESo/CH1
-3ft9j27XSI70yPZ0QohnWDplrI5koZlKUUYRDfod3Y7UHjqB0T298s4GGd1nnGGJ
-kC0Fv9KIuB5144S3ytSyXWZatP1q4ITbHj/i+iNVmy0K1gGT6AnYpXXhPsvl47C2
-OM0sXQRG5pBlBSR0edZLgcXm208iNudY00HtRipHP894GcTvpCbI2+zqzSRTDqlq
-lBAUMgSWp7RyTBLUSv6O
-=2A21
+iQIzBAEBCAAdFiEEnTJq8bp4IH0+VdvbunvTUHGURZ8FAll5yqoACgkQunvTUHGU
+RZ9+2A//bdqLL+do4caI0ZgYrmKvQjEWRMwtNSvwxmamkYwOtu/UHft4WNQGHvXd
+YRdfQsipA0zE9d4oJEKJVM7kbYaufjmR75jihmXzcJOmI2M/vRrh4hZHVY0+3var
+pMWfoIjgZ7Per633Kz9ffOweHYgpidDhVYxHXxyCltrKqhKfVHB6RVKxacaubpk5
+QSDLGTx3HzdKrFns2I0V/jfMrRzYQWB33rLb/DHVDj+OKWGuSuA5+zmZjQs7gABG
+rhJ6sPDdubRjIq5hc6yFgqliA7L+AmkjWENwmBgPJJHMYlEMT0SVFxzEfbaVS1b2
+4brubWDJzlQIXORwws5qDvd/qTkf4mMpLzuy2lMivS4i/2H21XwAZ7HR3yActD06
+qq63oy9J5LfnmhnZNYynO5w5k0iJxwhEZVGnTgTLhajr5eOD1Na2cYsGNV8MX5/B
+Zw/iPG9crOFGT+1/KhZ1cR1JKR+N1iBd1ycX346NIMujjW3V8yZrrFO/P2twBbbF
+449XkuHmHLJzlqoTeeQ+k+SPubI6UVRhvTWgL+b0n7ep2NRSJqVEnMmkywNPRIOB
+hovuYivVFsbT3Y3MlJVWbzjh8H3yT429/keLcb7xQYZa73eHnuYRkJIc4UH4d4Wc
+Am2Ov5xvOZZxRCxBcX6RX0Ez1ijr57tL3hrNqQjvGXLwG1upHmA=
+=XOCK
 -----END PGP SIGNATURE-----
