@@ -1,14 +1,14 @@
-# Copyright 1999-2013 Gentoo Foundation
+# Copyright 1999-2017 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
 EAPI=5
 
-inherit autotools eutils git-2
+inherit autotools eutils git-r3
 
 DESCRIPTION="a GNU/Linux keylogger that works!"
 HOMEPAGE="https://code.google.com/p/logkeys/"
-EGIT_REPO_URI="https://code.google.com/p/${PN}/"
+EGIT_REPO_URI="https://github.com/kernc/${PN}"
 
 KEYWORDS=""
 IUSE=""
