@@ -1,2 +1,7 @@
+  27 Jul 2017; Agostino Sarubbo <ago@gentoo.org> files/logkeys-init.d,
+  logkeys-9999.ebuild:
+  net-analyzer/logkeys: change EGIT_REPO_URI, use git-r3, use opernc-run into
+  the init script
+
   04 Nov 2016; Agostino Sarubbo <ago@gentoo.org> metadata.xml:
   update metadata.xml
